--- a/prototype/index.html
+++ b/prototype/index.html
@@ -23,9 +23,38 @@
 			bottom: 0;
 			left: 0;
 		}
+		body{
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+		}
+		#webgazerVideoFeed{
+			display: none;
+		}
+		#webgazerVideoCanvas{
+			display: none;
+		}
+		body > #webgazerFaceOverlay{
+			display: none;
+		}
+		#webgazerFaceFeedbackBox{
+			display: none;
+		}
+
 	</style>
 </head>
 <body>
+	<h1>
+		Prototype Eye Tracker
+	</h1>
+	<h4>
+		How to calibrate:
+	</h4>
+	<p>
+		Follow your mouse cursor with your eyes. <br/>
+		Clicking while looking at your mouse cursor will help calibrate faster.<br/>
+		The orange box shows where you are looking.
+	</p>
 	<button id="top-right">
 		Click
 	</button>
