--- a/prototype/index.html
+++ b/prototype/index.html
@@ -4,83 +4,101 @@
 	<meta charset="utf-8">
 	<title>Study Tool Prototype</title>
 	<script src="webgazer.js" type="text/javascript"></script>
-	<style>
-		#focus{
-			position: absolute;
-			top: 50vh;
-			left: 50vw;
-			width: 40px;
-			height: 40px;
-			background-color: rgb(255, 120, 0);
-		}
-		#top-right{
-			position: absolute;
-			top: 0;
-			right: 0;
-		}
-		#bottom-left{
-			position: absolute;
-			bottom: 0;
-			left: 0;
-		}
-		body{
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-		}
-		#webgazerVideoFeed{
-			display: none;
-		}
-		#webgazerVideoCanvas{
-			display: none;
-		}
-		body > #webgazerFaceOverlay{
-			display: none;
-		}
-		#webgazerFaceFeedbackBox{
-			display: none;
-		}
-		
-		body > video{
-			display: none !important;
-		}
-		body > canvas{
-			display: none !important;
-		}
-		
-	</style>
+	<link rel='stylesheet' type='text/css' href='reset.css'>
+	<link rel='stylesheet' type='text/css' href='index.css'>
 </head>
 <body>
-	<h1>
-		Prototype Eye Tracker
-	</h1>
-	<h4>
-		How to calibrate:
-	</h4>
-	<p>
-		Follow your mouse cursor with your eyes. <br/>
-		Clicking while looking at your mouse cursor will help calibrate faster.<br/>
-		The orange box shows where you are looking.
-	</p>
-	<button id="top-right">
-		Click
-	</button>
-	<button id="bottom-left">
-		Click
-	</button>
-	<div id="focus">
-		
-	</div>
+	<main class='content'>
+		<h1>
+			Prototype Eye Tracker
+		</h1>
+		<h4>
+			How to calibrate:
+		</h4>
+		<p>
+			Click the buttons in the four corners until they disappear.
+		</p>
+		<p id='xval'>
+		</p>
+		<button class='button-calibrate' id='cal-1' onclick="calib(1)">
+			5
+		</button>
+		<button class='button-calibrate' id='cal-2' onclick="calib(2)">
+			5
+		</button>
+		<button class='button-calibrate' id='cal-3' onclick="calib(3)">
+			5
+		</button>
+		<button class='button-calibrate' id='cal-4' onclick="calib(4)">
+			5
+		</button>
+		<div id='garden' class='garden'>
+			YERRRR
+		</div>
+		<div id="focus">
+			
+		</div>
+	</main>
 </body>
 <script>
-	webgazer.begin();
-	webgazer.setGazeListener((data, time) => {
-		if(data === null){
-			return;
+	var clickCount = 0;
+	var calibrated = false;
+
+	function calib(n){
+		var newVal = document.getElementById("cal-" + n).innerHTML - 1;
+		document.getElementById("cal-" + n).innerHTML = newVal;
+		if(newVal === 0){
+			document.getElementById("cal-" + n).style.display = "none";
 		}
-		//window.alert(data.x + ", " + data.y);
-		document.getElementById("focus").style.top = (data.y + "px");
-		document.getElementById("focus").style.left = (data.x + "px");
-	});
+		clickCount = clickCount + 1;
+		if(clickCount === 20){
+			calibrated = true;
+			document.getElementById("garden").style.display = "block";
+		}
+
+	}
+	const width = window.innerWidth;
+	const height = window.innerHeight;
+	webgazer.begin();
+
+	var xAvg = width / 2;
+	var yAvg = height / 2;
+	document.getElementById("xval").innerHTML = xAvg;
+
+	var unfocusedTime = 0;
+
+	const intervalWebgazer = setInterval(function(){
+		var prediction = webgazer.getCurrentPrediction();
+		if(prediction){
+			if(data.x > width / 2){
+				//looking at right side of screen
+			}
+			else{
+				//left side of screen
+			}
+			//if the user is gazing at the same area
+			if(Math.abs(xAvg - data.x) < width / 1.5 && Math.abs(yAvg - data.y) < height / 1.5){
+				xAvg = (xAvg * .9) + (data.x * .1);
+				yAvg = (yAvg * .9) + (data.y * .1);
+				unfocusedTime = unfocusedTime + 1;
+			}
+			else{
+				xAvg = (xAvg * .6) + (data.x * .4);
+				yAvg = (yAvg * .6) + (data.y * .4);	
+				unfocusedTime = 0;
+			}
+			if(unfocusedTime > 30){
+				window.alert("You seem to be losing concentration. Why not take a break and come back?");
+			}
+			document.getElementById("xval").innerHTML = xAvg;
+			document.getElementById("focus").style.top = (yAvg + "px");
+			document.getElementById("focus").style.left = (xAvg + "px");
+		}
+		else if(calibrated){
+
+		}
+	}, 100);
+
+
 </script>
 </html>
