--- a/prototype/index.html
+++ b/prototype/index.html
@@ -64,6 +64,12 @@
 	</main>
 </body>
 <script>
+	Notification.requestPermission().then(function(permission){
+		if(permission === "granted"){
+			//var notification = new Notification("Test");
+		}
+	})
+
 	var clickCount = 0;
 	var calibrated = false;
 	var paused = false;
@@ -129,7 +135,8 @@
 			}
 
 			if(unfocusedTime > 30){
-				window.alert("You seem to be losing concentration. Why not take a break and come back?");
+				//window.alert("You seem to be losing concentration. Why not take a break and come back?");
+				var n = new Notification("You seem to be losing concentration. Why not take a break and come back?");
 				unfocusedTime = 0;
 				mistakes = mistakes + 1;
 			}
